@@ -13,6 +13,7 @@ use warnings;
 
 use Data::Dumper;
 use Rex::Commands::File;
+use Rex::Commands::Fs;
 
 sub new {
   my $that  = shift;
@@ -27,21 +28,28 @@ sub new {
 sub get {
   my ($self) = @_;
 
-  my @cpuinfo = split /\n/, cat "/proc/cpuinfo";
-  chomp @cpuinfo;
-
   my @ret;
-  my $proc = 0;
-  for my $line (@cpuinfo) {
-    next if $line =~ qr{^$};
-    my ( $key, $val ) = split /\s*:\s*/, $line, 2;
-    if ( $key eq "processor" ) {
-      $proc = $val;
-      $ret[$proc] = {};
-      next;
-    }
 
-    $ret[$proc]->{$key} = $val;
+  if ( is_readable('/proc/cpuinfo') ) {
+
+    my @cpuinfo = split /\n/, cat "/proc/cpuinfo";
+    chomp @cpuinfo;
+
+    my $proc = 0;
+    for my $line (@cpuinfo) {
+      next if $line =~ qr{^$};
+      my ( $key, $val ) = split /\s*:\s*/, $line, 2;
+      if ( $key eq "processor" ) {
+        $proc = $val;
+        $ret[$proc] = {};
+        next;
+      }
+
+      $ret[$proc]->{$key} = $val;
+    }
+  }
+  else {
+    Rex::Logger::info( 'Cannot read /proc/cpuinfo', 'warn' );
   }
 
   return \@ret;
